--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+
+    <color name="mapStrokeColor">#D81B60</color>
+    <color name="mapFillColor">#4FD81B60</color>
 </resources>
